--- a/webapp/client/app/index.html
+++ b/webapp/client/app/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
 
-  <div class="view-container">
-    <div ng-view class="view-frame"></div>
+  <div>
+    <div ng-view></div>
   </div>
 
 </body>
