--- a/webapp/src/main/webapp/app/index.html
+++ b/webapp/src/main/webapp/app/index.html
@@ -14,6 +14,9 @@
   <script src="app/js/app.js"></script>
   <script src="app/js/controllers.js"></script>
   <script src="app/js/services.js"></script>
+  <script src="app/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="app/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+  <script src="app/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 </head>
 <body>
 
